# Qt3DPointcloudRenderer

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  qml.qrc
example/data/: bunny_normal.pcd
example/qml/: main.qml
example/shader/: pointcloud.frag  pointcloud.vert  surfel.frag  surfel.vert
example/src/: main.cpp
include/: qpointcloud.h  qpointcloudgeometry.h  qpointcloudreader.h  qpointfield.h  streamdata.h
src/: qpointcloud.cpp  qpointcloudgeometry.cpp  qpointcloudreader.cpp  qpointfield.cpp  streamdata.cpp
